# NetStepper

./: .gitignore  CMakeLists.txt  LICENSE.md  NetStepper.ino  README.md
Boards/Controller/: Controller.brd  Controller.sch  Controller.top.drill.gcode  Controller.top.etch.gcode  process.sh
Boards/Controller1/: Controller1.brd  Controller1.sch  Controller1.top.drill.off.gcode  Controller1.top.etch.gcode  Controller1.top.etch.off.gcode  process.sh
Boards/Controller2/: Controller2.brd  Controller2.sch
Boards/ControllerESP32/: ControllerESP32.brd  ControllerESP32.sch  ControllerESP32.top.drill.gcode  ControllerESP32.top.drill.off.gcode  ControllerESP32.top.etch.gcode  ControllerESP32.top.etch.off.gcode  process.sh
Boards/PositionSensor/: PositionSensor.brd  PositionSensor.sch  PositionSensor.top.drill.fix.gcode  PositionSensor.top.drill.gcode  PositionSensor.top.drill.off.gcode  PositionSensor.top.etch.fix.gcode  PositionSensor.top.etch.gcode  PositionSensor.top.etch.off.gcode  process.sh
Code/: Code.ino  Stepper.ino
PositionSensor/: PositionSensor.sch
src/: Manager.cpp  Manager.h  Stepper.cpp  Stepper.h  Utils.cpp  Utils.h  led.c  main.c  net_stepper.c  net_stepper.h  sensors.c  sensors.h  stepper_driver.c  stepper_driver.h
